<resources>

    <string name="app_name">Zombie Nation</string>
    <string name="menu_settings">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="favorites">Favorites</string>
    <string name="comming_next">Comming soon!</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="fav">Favorite</string>
    <string name="random">Random</string>
    <string name="share">Share</string>
    

</resources>