<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="a15069f19df0199"
        ads:loadAdOnCreate="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:background="@drawable/bck_fact" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/share"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/text_button"
                android:contentDescription="@string/share"
                android:onClick="clickShare"
                android:src="@android:drawable/ic_menu_share"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/fav"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/text_button"
                android:contentDescription="@string/fav"
                android:onClick="clickFav"
                android:src="@android:drawable/star_big_off"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/random"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/text_button"
                android:contentDescription="@string/random"
                android:onClick="clickRandom"
                android:src="@drawable/random"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/prev"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/text_button"
                android:contentDescription="@string/prev"
                android:onClick="clickPrev"
                android:src="@android:drawable/ic_media_previous"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/text_button"
                android:contentDescription="@string/next"
                android:onClick="clickNext"
                android:src="@android:drawable/ic_media_next"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="280dp"
            android:layout_above="@+id/linearLayout1"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="100dp" >

            <TextView
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="17dp" />
        </ScrollView>

        <ImageView
            android:id="@+id/image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_above="@+id/linearLayout1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="-40dp"
            android:contentDescription="@string/comming_next" />
    </RelativeLayout>

</RelativeLayout>